--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>add Item</title>
+    <title>Add Item</title>
     <link rel="stylesheet" type="text/css" href="/css/add-item.css" th:href="@{/css/add-item.css}" />
   </head>
   <body>
