--- a/src/main/resources/templates/add-supplier.html
+++ b/src/main/resources/templates/add-supplier.html
@@ -1,42 +1,89 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Supplier</title>
-    <link rel="stylesheet" type="text/css" href="/css/add_sup_cus.css" th:href="@{/css/add_sup_cus.css}"/>
-  </head>
-  <body>
-    <div id="container">
-      <h1>Add New Supplier</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Add Supplier</title>
+  <link rel="stylesheet" type="text/css" href="/css/add_sup_cus.css" th:href="@{/css/add_sup_cus.css}"/>
+  <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}" />
+</head>
+<body>
+<nav id="nav">
+  <ul>
+    <li>
+      <a th:href="@{/}">DASHBOARD</a>
+    </li>
+    <li>
+      <a th:href="@{item-list}">ITEMS</a>
+    </li>
+    <li class="selected">
+      <a th:href="@{supplier-list}">SUPPLIERS</a>
+    </li>
+    <li>
+      <a th:href="@{#}">CUSTOMERS</a>
+    </li>
+    <li>
+      <a th:href="@{#}">ORDERS</a>
+    </li>
+    <li>
+      <a th:href="@{#}">SALES</a>
+    </li>
+  </ul>
+  <h1>INVENTORA</h1>
+  <div>
+    <a th:href="@{/logout}" class="logOut_btn">Logout</a>
+  </div>
+</nav>
+<div id="container">
+  <h1>Add New Supplier</h1>
 
-      <form th:action="@{/submit-supplier}" th:object="${supplier}" method="POST">
-        <div>
-          <label for="supplier_id">Supplier Id:</label>
-          <input type="text" id="supplier_id" name="supplier_id" th:field="*{supplierId}" required />
-        </div>
-        <div>
-          <label for="supplier_name">Supplier Name:</label>
-          <input type="text" id="supplier_name" name="supplier_name" th:field="*{supplierName}" required />
-        </div>
-        <div>
-          <label for="NIC number">NIC number:</label>
-          <input type="text" id="NIC number" name="NIC number" th:field="*{supplierNIC}" required />
-        </div>
-        <div>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" th:field="*{email}" required />
-        </div>
-        <div>
-          <label for="phone">Phone Number:</label>
-          <input type="tel" id="phone" name="phone" th:field="*{supplierContactNumber}" required />
-        </div>
-        <div class="address">
-          <label for="address">Address:</label>
-          <textarea id="address" name="address" rows="4" th:field="*{address}" required></textarea>
-        </div>
-        <button type="submit">Submit</button>
-      </form>
+  <form th:action="@{/submit-supplier}" th:object="${supplier}" method="POST">
+    <div>
+      <label for="supplier_id">Supplier Id:</label>
+      <input type="text" id="supplier_id" name="supplier_id" th:field="*{supplierId}" required />
     </div>
-  </body>
+    <div>
+      <label for="supplier_name">Supplier Name:</label>
+      <input type="text" id="supplier_name" name="supplier_name" th:field="*{supplierName}" required />
+    </div>
+    <div>
+      <label for="NIC number">NIC number:</label>
+      <input type="text" id="NIC number" name="NIC number" th:field="*{supplierNIC}" required />
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" th:field="*{email}" required />
+    </div>
+    <div>
+      <label for="phone">Phone Number:</label>
+      <input type="tel" id="phone" name="phone" th:field="*{supplierContactNumber}" required />
+    </div>
+    <div class="address">
+      <label for="address">Address:</label>
+      <textarea id="address" name="address" rows="4" th:field="*{address}" required></textarea>
+    </div>
+    <button type="submit">Submit</button>
+  </form>
+</div>
+<footer>
+  <div>
+    <h3>About</h3>
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting
+      industry. Lorem Ipsum has been the industry's standard dummy text ever
+      since the 1500s, when an unknown printer took a galley of type and
+      scrambled it to make a type specimen book. It has survived not only
+      five centuries, but also the leap into electronic typesetting,
+      remaining essentially unchanged.
+    </p>
+  </div>
+  <h2>INVENTORA</h2>
+  <ul>
+    <li><a href="" #>PRIVACY POLICY</a></li>
+    <li><a href="" #>TERMS OF USE</a></li>
+    <li><a href="" #>CONTACT US</a></li>
+    <li><a href="" #>FAQ</a></li>
+  </ul>
+</footer>
+</body>
 </html>
