--- a/src/main/resources/templates/supplier-list.html
+++ b/src/main/resources/templates/supplier-list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Suppliers</title>
     <link rel="stylesheet" type="text/css" href="/css/supplier-list.css" th:href="@{/css/supplier-list.css}"/>
-    <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}" />
+    <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}"/>
 </head>
 <body>
 <nav id="nav">
@@ -14,13 +14,13 @@
             <a th:href="@{/}">DASHBOARD</a>
         </li>
         <li>
-            <a th:href="@{item-list}">ITEMS</a>
+            <a th:href="@{/item-list}">ITEMS</a>
         </li>
         <li class="selected">
-            <a th:href="@{supplier-list}">SUPPLIERS</a>
+            <a th:href="@{/supplier-list}">SUPPLIERS</a>
         </li>
         <li>
-            <a th:href="@{#}">CUSTOMERS</a>
+            <a th:href="@{/client-list}">CUSTOMERS</a>
         </li>
         <li>
             <a th:href="@{#}">ORDERS</a>
