--- a/src/main/resources/templates/client-list.html
+++ b/src/main/resources/templates/client-list.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Add Supplier</title>
-    <link rel="stylesheet" type="text/css" href="/css/add_sup_cus.css" th:href="@{/css/add_sup_cus.css}"/>
+    <title>Customers</title>
+    <link rel="stylesheet" type="text/css" href="/css/supplier-list.css" th:href="@{/css/supplier-list.css}"/>
     <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}"/>
 </head>
 <body>
@@ -16,10 +16,10 @@
         <li>
             <a th:href="@{/item-list}">ITEMS</a>
         </li>
-        <li class="selected">
+        <li>
             <a th:href="@{/supplier-list}">SUPPLIERS</a>
         </li>
-        <li>
+        <li class="selected">
             <a th:href="@{/client-list}">CUSTOMERS</a>
         </li>
         <li>
@@ -35,35 +35,24 @@
     </div>
 </nav>
 <div id="container">
-    <h1>Add New Supplier</h1>
-
-    <form th:action="@{/submit-supplier}" th:object="${supplier}" method="POST">
-        <div>
-            <label for="supplier_id">Supplier Id:</label>
-            <input type="text" id="supplier_id" name="supplier_id" th:field="*{supplierId}" required/>
+    <h1>Customer List</h1>
+    <div id="supplier-list" th:each="client :${clientList}">
+        <div id="supplier">
+            <div>
+                <p th:text="${client.client_name}">Supplier Name</p><br>
+                <p th:text="${client.client_id}">Supplier Id</p><br>
+                <p th:text="${client.client_contact}">Supplier Contact No.</p><br>
+                <p th:text="${client.client_NIC}">NIC</p><br>
+                <p th:text="${client.client_email}">Email</p><br>
+                <p th:text="${client.client_address}">Address</p><br>
+                <div class="button_list">
+                    <a type="button" class="button" th:href="@{/update-client/{id}(id=${client.client_id})}">Update</a>
+                    <a type="button" class="button_dlt"
+                       th:href="@{/delete-client/{id}(id=${client.client_id})}">Delete</a>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="supplier_name">Supplier Name:</label>
-            <input type="text" id="supplier_name" name="supplier_name" th:field="*{supplierName}" required/>
-        </div>
-        <div>
-            <label for="NIC number">NIC number:</label>
-            <input type="text" id="NIC number" name="NIC number" th:field="*{supplierNIC}" required/>
-        </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" th:field="*{email}" required/>
-        </div>
-        <div>
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone" th:field="*{supplierContactNumber}" required/>
-        </div>
-        <div class="address">
-            <label for="address">Address:</label>
-            <textarea id="address" name="address" rows="4" th:field="*{address}" required></textarea>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    </div>
 </div>
 <footer>
     <div>
