--- a/src/main/resources/static/css/supplier-client-list.css
+++ b/src/main/resources/static/css/supplier-client-list.css
@@ -47,6 +47,7 @@ body {
   padding: 0.3rem 1.2rem;
   border-radius: 5px;
   font-size: 1.3rem;
+  color: black;
 }
 
 .button_dlt {
@@ -56,9 +57,41 @@ body {
   padding: 0.3rem 1.2rem;
   border-radius: 5px;
   font-size: 1.3rem;
+  color: white;
 }
 
 a {
   text-decoration: none;
   color: inherit;
+}
+
+#add-new-btn {
+  text-decoration: none;
+  background-color: #ad9fff;
+  color: black;
+  border: none;
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+  border-radius: 5rem;
+  transition: background-color 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#add-new-btn:hover {
+  background-color: #8672ff;
+  cursor: pointer;
+}
+
+#new-btn-bar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#supplier span {
+  font-size: 2rem;
+  font-weight: normal;
+  color: #444;
 }
