--- a/src/main/resources/templates/client-list.html
+++ b/src/main/resources/templates/client-list.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Customers</title>
-    <link rel="stylesheet" type="text/css" href="/css/supplier-list.css" th:href="@{/css/supplier-list.css}"/>
+    <link rel="stylesheet" type="text/css" href="/css/supplier-client-list.css"
+          th:href="@{/css/supplier-client-list.css}"/>
     <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}"/>
 </head>
 <body>
@@ -35,16 +36,19 @@
     </div>
 </nav>
 <div id="container">
-    <h1>Customer List</h1>
+    <div id="new-btn-bar">
+        <h1>Client List</h1>
+        <a th:href="@{/add-client}" id="add-new-btn">Add New</a>
+    </div>
     <div id="supplier-list" th:each="client :${clientList}">
         <div id="supplier">
             <div>
-                <p th:text="${client.client_name}">Supplier Name</p><br>
-                <p th:text="${client.client_id}">Supplier Id</p><br>
-                <p th:text="${client.client_contact}">Supplier Contact No.</p><br>
-                <p th:text="${client.client_NIC}">NIC</p><br>
-                <p th:text="${client.client_email}">Email</p><br>
-                <p th:text="${client.client_address}">Address</p><br>
+                <p>Customer Name: <span th:text="${client.client_name}"></span></p><br>
+                <p>Supplier Id: <span th:text="${client.client_id}"></span></p><br>
+                <p>Supplier Contact No: <span th:text="${client.client_contact}"></span></p><br>
+                <p>NIC: <span th:text="${client.client_NIC}"></span></p><br>
+                <p>Email: <span th:text="${client.client_email}"></span></p><br>
+                <p>Address: <span th:text="${client.client_address}"></span></p><br>
                 <div class="button_list">
                     <a type="button" class="button" th:href="@{/update-client/{id}(id=${client.client_id})}">Update</a>
                     <a type="button" class="button_dlt"
