--- a/src/main/resources/templates/supplier-list.html
+++ b/src/main/resources/templates/supplier-list.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Suppliers</title>
-    <link rel="stylesheet" type="text/css" href="/css/supplier-list.css" th:href="@{/css/supplier-list.css}"/>
+    <link rel="stylesheet" type="text/css" href="/css/supplier-client-list.css"
+          th:href="@{/css/supplier-client-list.css}"/>
     <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}"/>
 </head>
 <body>
@@ -35,16 +36,19 @@
     </div>
 </nav>
 <div id="container">
-    <h1>Supplier List</h1>
+    <div id="new-btn-bar">
+        <h1>Supplier List</h1>
+        <a th:href="@{/add-supplier}" id="add-new-btn">Add New</a>
+    </div>
     <div id="supplier-list" th:each="supplier :${supplierList}">
         <div id="supplier">
             <div>
-                <p th:text="${supplier.supplierName}">Supplier Name</p><br>
-                <p th:text="${supplier.supplierId}">Supplier Id</p><br>
-                <p th:text="${supplier.supplierContactNumber}">Supplier Contact No.</p><br>
-                <p th:text="${supplier.supplierNIC}">NIC</p><br>
-                <p th:text="${supplier.email}">Email</p><br>
-                <p th:text="${supplier.address}">Address</p><br>
+                <p>Supplier Name: <span th:text="${supplier.supplierName}"></span></p><br>
+                <p>Supplier ID: <span th:text="${supplier.supplierId}"></span></p><br>
+                <p>Supplier Contact No: <span th:text="${supplier.supplierContactNumber}"></span></p><br>
+                <p>NIC: <span th:text="${supplier.supplierNIC}"></span></p><br>
+                <p>Email: <span th:text="${supplier.email}"></span></p><br>
+                <p>Address: <span th:text="${supplier.address}"></span></p><br>
                 <div class="button_list">
                     <a type="button" class="button" th:href="@{/showSupplierForUpdate/{id}(id=${supplier.supplierId})}">Update</a>
                     <a type="button" class="button_dlt" th:href="@{/deleteSupplier/{id}(id=${supplier.supplierId})}">Delete</a>
