--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -36,7 +36,7 @@
 </nav>
 <div th:if="${param.error}">
     <div class="alert-danger">
-        <span><strong>Error!</strong> Invalid Supplier Id, Supplier does not exist.</span>
+        <span><strong>Error!</strong> Invalid Supplier ID, Supplier does not exist or image URL is too long.</span>
     </div>
 </div>
 <div id="container">
@@ -66,14 +66,25 @@
             ></textarea>
         </div>
         <div>
-            <label for="product_price">Price:</label>
+            <label for="buy_price">Buy Price:</label>
             <input
                     type="number"
-                    id="product_price"
-                    name="product_price"
+                    id="buy_price"
+                    name="sell_price"
                     step="0.01"
                     required
-                    th:field="*{price}"
+                    th:field="*{buyPrice}"
+            />
+        </div>
+        <div>
+            <label for="sell_price">Sell Price:</label>
+            <input
+                    type="number"
+                    id="sell_price"
+                    name="sell_price"
+                    step="0.01"
+                    required
+                    th:field="*{sellPrice}"
             />
         </div>
         <div>
