--- a/src/main/resources/templates/item-list.html
+++ b/src/main/resources/templates/item-list.html
@@ -42,8 +42,9 @@
     <div id="item-list" th:each="item :${itemList}">
         <div id="item">
             <div>
-                <p>Item Name: <span th:text="${item.itemName}"></span></p><br>
-                <p>Item Price: <span th:text="${item.price}"></span></p>
+                <p>Name: <span th:text="${item.itemName}"></span></p><br>
+                <p>Buy Price: <span th:text="${#numbers.formatDecimal(item.buyPrice, 0, 'COMMA', 2, 'POINT')}"></span></p><br>
+                <p>Sell Price: <span th:text="${#numbers.formatDecimal(item.sellPrice, 0, 'COMMA', 2, 'POINT')}"></span></p><br>
                 <div class="button_list">
                     <a type="button" class="button" th:href="@{/showItemForUpdate/{id}(id=${item.itemId})}">Update</a>
                     <a type="button" class="button" th:href="@{/view-item/{id}(id=${item.itemId})}">Show</a>
