--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,26 +73,23 @@
                 <p>LKR <span th:text="${#numbers.formatDecimal(totalExpenditure, 0, 'COMMA', 2, 'POINT')}"></span></p>
             </div>
             <div>
-                <h3>Total Projected Income</h3>
-                <p>LKR <span th:text="${#numbers.formatDecimal(totalProjectedIncome, 0, 'COMMA', 2, 'POINT')}"></span></p>
+                <h3>Total Revenue</h3>
+                <p>LKR <span th:text="${#numbers.formatDecimal(totalRevenue, 0, 'COMMA', 2, 'POINT')}"></span></p>
             </div>
         </div>
     </div>
-<!--    <div class="horizontal">-->
-<!--        <div>-->
-<!--            <h3>Total Orders</h3>-->
-<!--            <p>$1833</p>-->
-<!--        </div>-->
-<!--        <div>-->
-<!--            <h3>Total Delivers</h3>-->
-<!--            <p>$1833</p>-->
-<!--        </div>-->
-<!--        <div class="vir-line"></div>-->
-<!--        <div>-->
-<!--            <h3>Average Order Price</h3>-->
-<!--            <p>$1833</p>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="horizontal">
+        <div>
+            <h3>Total Projected Income</h3>
+        </div>
+        <div class="vir-line"></div>
+        <div>
+            <p>LKR <span th:text="${#numbers.formatDecimal(totalProjectedIncome, 0, 'COMMA', 2, 'POINT')}"></span></p>
+        </div>
+    </div>
+</div>
+<div>
+    <a class="btn" th:href="@{report}">Report</a>
 </div>
 <footer>
     <div>
