--- a/src/main/resources/static/css/report.css
+++ b/src/main/resources/static/css/report.css
@@ -49,3 +49,73 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+/* Button Container */
+.btn-container {
+    text-align: center;
+    margin-top: 30px; /* Adjust the spacing as needed */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.btn {
+    padding: 8px 15px;
+    background-color: #AD9FFF;
+    color: black;
+    text-decoration: none;
+    border: none;
+    border-radius: 50px;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+/* Hover effect for the button */
+.btn:hover {
+    background-color: #8672FF;
+    cursor: pointer;
+}
+
+/* Center the header text and style the hyperlink */
+#nav {
+    text-align: center;
+}
+
+.header-link {
+    color: #007bff;
+    text-decoration: none;
+    font-size: 24px; /* Adjust the font size as needed */
+}
+
+.header-link:hover {
+    text-decoration: black;
+}
+
+.table-container {
+    margin-top: 10px;
+}
+
+#nav h1 {
+    font-family: Montserrat, serif;
+    font-size: 1.5rem;
+    color: #22005d;
+    letter-spacing: 2px;
+    /* Center the heading horizontally and vertically */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#nav {
+    width: 100%;
+    background-color: #fdf8ff;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Product Sans, Helvetica, sans-serif;
+}
