Commented the code for easier readability, and minor UI changes

--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -9,6 +9,7 @@
     justify-content: space-between;
     align-items: center;
     font-family: Product Sans, Helvetica, sans-serif;
+    border-bottom: 1px solid #dcdbdb;
 }
 
 #nav ul {
