--- a/src/main/resources/templates/supplier-list.html
+++ b/src/main/resources/templates/supplier-list.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Suppliers</title>
+
+    <!-- Include CSS stylesheets using Thymeleaf expressions -->
     <link rel="stylesheet" type="text/css" href="/css/supplier-client-list.css"
           th:href="@{/css/supplier-client-list.css}"/>
     <link rel="stylesheet" type="text/css" href="/css/nav.css" th:href="@{/css/nav.css}"/>
 </head>
 <body>
+<!-- Navigation Section -->
 <nav id="nav">
     <ul>
         <li>
@@ -30,10 +33,12 @@
     </div>
 </nav>
 <div id="container">
+    <!-- New Supplier Button -->
     <div id="new-btn-bar">
         <h1>Supplier List</h1>
         <a th:href="@{/add-supplier}" id="add-new-btn">Add New</a>
     </div>
+    <!-- Supplier List -->
     <div id="supplier-list" th:each="supplier :${supplierList}">
         <div id="supplier">
             <div>
@@ -51,6 +56,7 @@
         </div>
     </div>
 </div>
+<!-- Footer Section -->
 <footer>
     <div>
         <h3>About</h3>
